src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Assortment__c</fullName>
        <label>Assortment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Name__c</fullName>
        <label>Business Area Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_ID__c</fullName>
        <label>Dummy Three ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_Name__c</fullName>
        <label>Dummy Three Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Product_Category__c</fullName>
        <label>Logistics Product Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Service_Area__c</fullName>
        <label>Logistics Service Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Article_ID__c</fullName>
        <label>Product/Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_4_Name__c</fullName>
        <label>Product (Level 4) Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>